[package]
name = "seal-the-sub"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "=0.4.0-alpha0.1"
specs = "0.15"
vek = "0.9"
rand = "0.7"
