[package]
name = "seal-the-sub"
version = "0.1.0"
authors = ["Joshua Barretto <joshua.s.barretto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quicksilver = "0.3"
specs = "0.15"
vek = "0.9"
rand = "0.7"
serde = "1.0"

[profile.dev]
opt-level = 1
overflow-checks = false
